body text align center to fix contact div

--- a/project_2/css/styles.css
+++ b/project_2/css/styles.css
@@ -23,7 +23,7 @@ body {
        font-size: 20px;
        line-height: 1.5;
 			 padding: 0 35px;
-
+       text-align: center;
      }
 
      /* nav */
@@ -202,5 +202,13 @@ h3 {
 .top {
   display:none;
 }
-
+.contact-div {
+  text-align: center;
+  word-wrap: break-word;
+}
+.contact-div p {
+  text-align: center;
+  display: inline;
+  word-wrap: break-word;
+}
 }
